# ai-terminal

./: CONTRIBUTING.md  gemini_test.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
ai-terminal-linux-v0.1.5/: install.sh  uninstall.sh
ai-terminal-linux-v0.1.6/: config_template.json
scripts/: build_release.sh  install.sh  uninstall.sh
terminal/: agent.py  cli.py  executor.py  gemini.py  safety.py
terminal/commands/: commands.py
terminal/safety/: safety.py
